spec/invalid/eq_too_many_args.expr.interpreted
[
    (
        CompileError(
            WrongNumberOfArgs {
                expected: 2,
                actual: 3,
            },
        ),
        0..20,
    ),
]